# Test-Dashboard

./: .gitignore
test_task/: app.py  colors.py  pyproject.toml  queries.py
