[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["diplodocx <zabarinternational@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "2.9.3"
pandas = "2.0.1"
dash-extensions = "1.0.0"
dash-mantine-components = "0.12.1"
sqlalchemy = "^2.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
